--- a/src/MannsBlog/Views/Root/Privacy.cshtml
+++ b/src/MannsBlog/Views/Root/Privacy.cshtml
@@ -223,6 +223,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <li>@_localizer["plugins-changes-rights6"]</li>
     <li>@_localizer["plugins-changes-rights7"]</li>
     <li>@_localizer["plugins-changes-rights8"]</li>
+    <li>@_localizer["plugins-changes-rights9"]</li>
 </ul>
 <h2 id="m42">@_localizer["glossary-title"]</h2>
 <p>@_localizer["glossary-blurp"]</p>
