--- a/src/MannsBlog/Views/Shared/_Sidebar.cshtml
+++ b/src/MannsBlog/Views/Shared/_Sidebar.cshtml
@@ -97,6 +97,22 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </a>
         </li>
         <li class="list-inline-item">
+            <a href="https://www.reddit.com/user/saigkill" title="Reddit">
+                <span class="fas fa-stack">
+                    <i class="fas fa-square fa-stack-2x"></i>
+                    <i class="fab fa-reddit-square fa-stack-1x fa-inverse" title="Reddit Profile"></i>
+                </span>
+            </a>
+        </li>
+        <li class="list-inline-item">
+            <a href="https://profile.codersrank.io/user/saigkill" title="Codersrank">
+                <span class="fas fa-stack">
+                    <i class="fas fa-square fa-stack-2x"></i>
+                    <i class="fas fa-code fa-stack-1x fa-inverse" title="Codersrank Profile"></i>
+                </span>
+            </a>
+        </li>
+        <li class="list-inline-item">
             <a href="https://www.amazon.de/-/e/B07J3CPKR1" title="Amazon Author Page">
                 <span class="fas fa-stack">
                     <i class="fas fa-square fa-stack-2x"></i>
@@ -156,7 +172,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <h3>Badges</h3>
 <div id="counter">
     <h4>@_localizer["Visitors"]:</h4>
-    <a id="1537735771" href="https://www.counter.de/">counter</a><script type="text/javascript" language="JavaScript" src="https://www.counter-go.de/counter_js.php?account=1537735771"></script><noscript><a href="https://www.counter-go.de/" target="_blank"><img border=0 src="https://www.counter-go.de/counter.php?account=1537735771"/></a></noscript>
+    <script language="JavaScript" src="https://www.besucherzaehler-kostenlos.de/js/counter.js.php?count=1&id=saschamanns.de&start=1000&design=2e"></script>
+</div>
+<hr />
+<div id="codersrank">
+    <h4>Codersrank</h4>
+    <p><codersrank-summary username="saigkill"></codersrank-summary></p>
 </div>
 <hr />
 <div id="stackoverflow">
@@ -166,10 +187,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <hr />
 <div id="codeproject">
     <h4>Codeproject</h4>
-    <p><iframe frameborder="no" height="180" scrolling="no" src="https://www.codeproject.com/members/flair/11834143" width="220"></iframe></p>
-</div>
-<hr />
-<div id="openhub">
-    <h4>OpenHUB</h4>
-    <p><a href="https://www.openhub.net/accounts/75906?ref=Detailed" target="_blank"><img alt="Open Hub profile for Sascha Manns" border="0" height="35" src="https://www.openhub.net/accounts/75906/widgets/account_detailed.gif" width="230" /></a></p>
+    <p><iframe frameborder="true" height="180" scrolling="no" src="https://www.codeproject.com/members/flair/11834143" width="220"></iframe></p>
 </div>
