--- a/src/MannsBlog/Views/_ViewImports.cshtml
+++ b/src/MannsBlog/Views/_ViewImports.cshtml
@@ -18,4 +18,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 @using MannsBlog.Helpers
 @using MannsBlog.Services.DataProviders
 @using Microsoft.Extensions.Configuration
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Navigations
+@using Syncfusion.Blazor.Inputs
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
