--- a/src/MannsBlog/Views/Root/About.cshtml
+++ b/src/MannsBlog/Views/Root/About.cshtml
@@ -43,16 +43,18 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ul class="list-unstyled">
             <li><a href="mailto:Sascha.Manns@@outlook.de"><i class="fas fa-envelope"></i> Sascha.Manns@outlook.de</a></li>
             <li><a href="https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x496ed69e19f956dc7784d79cffa8021619dd0900" target="_blank"><i class="fas fa-lock"></i> 0x496ed69e19f956dc7784d79cffa8021619dd0900</a></li>
-            <li><a href="https://mastodon.social/@@saigkill" target="_blank"><i class="fab fa-mastodon"></i> Mastodon</a></li>
+            <li><a rel="me" href="https://mastodon.social/@@saigkill" target="_blank"><i class="fab fa-mastodon"></i> Mastodon</a></li>
             <li><a href="https://twitter.com/saigkill" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a></li>
             <li><a href="https://www.facebook.com/sascha.manns" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
             <li><a href="https://instagram.com/sascha.manns" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
             <li><a href="https://www.linkedin.com/in/saigkill/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+            <li><a href="https://blazot.com/saigkill" target="_blank"><img src="https://blazot.com/images/blazotsquarelogo.svg" width="2%"/> Blazot</a></li>
             <li><a href="https://www.amazon.de/-/e/B07J3CPKR1" target="_blank"><i class="fab fa-amazon"></i> @_localizer["amazon-page"]</a></li>
             <li><a href="skype:schurik0815"><i class="fab fa-skype"></i> Skype</a></li>
             <li><a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" target="_blank"><i class="fab fa-xing-square"></i> XING</a></li>
             <li><a href="https://www.last.fm/user/illuminatus1979" target="_blank"><i class="fab fa-lastfm-square"></i> Last.fm</a></li>
             <li><a href="https://dev.to/saigkill" title="Dev.to Community"><i class="fab fa-dev"></i> Dev.to</a></li>
+            <li><a href="https://www.reddit.com/user/saigkill"><i class="fab fa-reddit-square"></i> Reddit</a></li>
             <li><a href="https://discord.com/channels/@@saigkill0#6514" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
             <li><img src="~/img/social/element-matrix.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"> Matrix: @@saigkill0:matrix.org</li>
             <li><a href="https://steamcommunity.com/id/saigkill/"><i class="fab fa-steam-square"></i> Steam</a></li>
@@ -61,6 +63,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ul class="list-unstyled">
             <li><img src="~/img/social/openhub.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"><a href="https://openhub.net/accounts/saigkill" target="_blank"> OpenHub</a></li>
             <li><img src="~/img/social/codestats.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://codestats.net/users/saigkill" target="_blank"> Codestats</a></li>
+            <li><a href="https://profile.codersrank.io/user/saigkill" target="_blank"><i class="fas fa-code"></i> Codersrank</a></li>
             <li><img src="~/img/social/codeproject.png" class="alignnone size-medium wp-image-86" width="20" height="20" /><a href="https://www.codeproject.com/Members/SaschaManns" target="_blank"> Codeproject</a></li>
             <li><a href="https://rubygems.org/profiles/saigkill" target="_blank"><i class="far fa-gem"></i> Rubygems</a></li>
             <li><a href="https://github.com/saigkill" target="_blank"><i class="fab fa-github-square"></i> GitHub</a></li>
@@ -73,8 +76,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD"><img src="~/img/misc/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
                 <li><a href="https://paypal.me/SaschaManns" target="_blank"><img src="~/img/misc/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
                 <li><a href="https://www.patreon.com/saigkill"><img src="~/img/misc/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
-                <li><a href="https://liberapay.com/saigkill/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://liberapay.com/saigkill/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>                
             </ul>
         </div>
     </div>
