--- a/src/MannsBlog/Views/Shared/_StoryBrief.cshtml
+++ b/src/MannsBlog/Views/Shared/_StoryBrief.cshtml
@@ -15,6 +15,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *@
 @using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.AspNetCore.Localization
 @inject IViewLocalizer _localizer
 @model BlogStory
 @{
@@ -64,9 +65,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <div class="card card-body post-card">
     <div class="post-preview">
         <img class="card-img-top" id="@imgid" src="@imgsrc" alt="Post Image" />
-        <h3 itemprop="headline" class="post-title">@Model.Title</h3>
+        <h3 itemprop="headline" class="post-title"><a href=@Model.Slug>@Model.Title</a></h3>
         <p class="post-meta">
-            <i class="fas fa-calendar"></i> @Model.DatePublished.AddHours(-4).ToString("MMMM dd, yyyy")
+            <i class="fas fa-calendar"></i> @Model.DatePublished.ToString("MMMM dd, yyyy")
             <i class="fas fa-edit"></i> Sascha Manns
             <i class="fas fa-comments"></i> <span class="disqus-comment-count" data-disqus-identifier="@Model.UniqueId">@_localizer["comments"]</span>.
             <i class="fas fa-clock"></i> @minutes @strMinutes @seconds @strSeconds
