--- a/src/MannsBlog/wwwroot/css/contact.css
+++ b/src/MannsBlog/wwwroot/css/contact.css
@@ -1,47 +1,266 @@
-﻿.tg {
+﻿/*.tg {
     border-collapse: collapse;
     border-spacing: 0;
 }
 
-.tg td {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    overflow: hidden;
-    padding: 10px 5px;
-    word-break: normal;
-}
+    .tg td {
+        border-color: black;
+        border-style: none;
+        border-width: 1px;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        overflow: hidden;
+        padding: 10px 5px;
+        word-break: normal;
+    }
 
-.tg th {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    overflow: hidden;
-    padding: 10px 5px;
-    word-break: normal;
-}
+    .tg th {
+        border-color: black;
+        border-style: none;
+        border-width: 1px;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        font-weight: normal;
+        overflow: hidden;
+        padding: 10px 5px;
+        word-break: normal;
+    }
 
-.tg .tg-0lax {
-    text-align: left;
-    vertical-align: top
-}
+    .tg .tg-0lax {
+        text-align: left;
+        vertical-align: top
+    }
 
 @media screen and (max-width: 767px) {
     .tg {
         width: auto !important;
     }
 
-    .tg col {
-        width: auto !important;
-    }
+        .tg col {
+            width: auto !important;
+        }
 
     .tg-wrap {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
+}*/
+
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all
+}
+
+a {
+    color: #0366d6
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #0D6EFD;
+    border-color: #1861ac
+}
+
+.border-top {
+    border-top: 1px solid #e5e5e5
+}
+
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05)
+}
+
+button.accept-policy {
+    font-size: 1rem;
+    line-height: inherit
+}
+
+a,
+a:visited {
+    color: #000
+}
+
+    a:hover {
+        color: #000
+    }
+
+.bg-black {
+    background-color: #014782
+}
+
+.border-black {
+    border: 1px solid #014782
+}
+
+.content-section {
+    background-color: #014782;
+    color: #ccc;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: large
+}
+
+    .content-section a,
+    .content-section a:visited {
+        color: #f00
+    }
+
+        .content-section a:hover {
+            color: #fff
+        }
+
+.dark-header {
+    background-color: #014782;
+    color: #f00;
+    padding-bottom: .25em;
+    padding-top: .25em
+}
+
+.grecaptcha-badge {
+    visibility: collapse !important
+}
+
+.header-inner-section {
+    padding: 2em 0 2.5em 0
+}
+
+.l-minus-1 {
+    position: relative;
+    left: -.2em
+}
+
+.stripe-header-container {
+    position: relative;
+    overflow: hidden
+}
+
+.long-stripe {
+    position: absolute;
+    width: 100%;
+    z-index: 31;
+    height: 34px;
+    display: inline-block;
+    background-color: #000;
+    margin-top: .25em;
+    margin-left: .25em;
+    -webkit-transform: skew(-25deg);
+    -ms-transform: skew(-25deg);
+    transform: skew(-25deg)
+}
+
+.shaded {
+    background-color: rgba(0, 0, 0, .45);
+    padding: 2em
+}
+
+.shaded-darker {
+    background-color: rgba(0, 0, 0, .65);
+    padding: 2em
+}
+
+.t-minus-2 {
+    position: relative;
+    top: -.55em
+}
+
+/*@media(min-width:1200px) {
+    .container {
+        width: 975px
+    }
+
+    .stripesdiv {
+        position: absolute;
+        z-index: 30;
+        height: 100%;
+        min-height: 400px;
+        width: 100px;
+        right: 20px;*/
+        /*background-image: url("/assets/images/racingstripes.svg");*/
+        /*background-repeat: repeat-y
+    }
+}*/
+
+/*@media(min-width:1400px) {
+    .container {
+        width: 1000px
+    }
+}
+*/
+.blazor-reconnect-modal {
+    position: fixed;
+    inset: 0;
+    z-index: 1000;
+    display: block;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, .8);
+    text-align: center;
+    font-weight: bold;
+    color: #fff
+}
+
+.components-reconnect-hide {
+    display: none
+}
+
+.components-reconnect-show div {
+    display: none
+}
+
+.components-reconnect-show .show {
+    display: block
+}
+
+.components-reconnect-failed div {
+    display: none
+}
+
+.components-reconnect-failed .failed {
+    display: block
+}
+
+.components-reconnect-refused div {
+    display: none
+}
+
+.components-reconnect-refused .refused {
+    display: block
+}
+
+.components-reconnect-rejected div {
+    display: none
+}
+
+.components-reconnect-rejected .rejected {
+    display: block
+}
+
+.blazor-reconnect-modal a {
+    color: #f00
+}
+
+.blazor-reconnect-modal h5 {
+    margin-top: 2em;
+    padding: 1em
+}
+
+input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
 }
