--- a/src/MannsBlog/Views/Shared/_Layout.cshtml
+++ b/src/MannsBlog/Views/Shared/_Layout.cshtml
@@ -165,8 +165,7 @@
         @RenderSection("Styles", required: false)
     </environment>
 
-    @*<link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />*@
-    <link href="https://cdn.syncfusion.com/blazor/19.3.43/styles/bootstrap5.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />    
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -416,9 +415,8 @@
         <script id="dsq-count-scr" src="https://@(_config["Disqus:BlogName"]).disqus.com/count.js" async></script>        
     </environment>
     <script src="~/lib/cookieconsent/build/cookieconsent.min.js"></script>
-    <script src="~/lib/codersrank/summary/codersrank-summary.min.js"></script>
-    <script src="https://cdn.syncfusion.com/blazor/19.3.43/syncfusion-blazor.min.js"></script>
-    @*<script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"></script>*@
+    <script src="~/lib/codersrank/summary/codersrank-summary.min.js"></script>    
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
