--- a/src/MannsBlog/Views/Shared/_Menu.cshtml
+++ b/src/MannsBlog/Views/Shared/_Menu.cshtml
@@ -38,4 +38,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <li class="nav-item"><a class="nav-link @isCurrent("Root", "Imprint")" asp-controller="Root" asp-action="Imprint" style="color: #eee">@_localizer["Imprint"]</a></li>
 <li class="nav-item"><a class="nav-link @isCurrent("Root", "Privacy")" asp-controller="Root" asp-action="Privacy" style="color: #eee">@_localizer["Privacy"]</a></li>
 <li class="nav-item"><a class="nav-link @isCurrent("Search", "")" asp-controller="Search" asp-action="Index" style="color: #eee">@_localizer["Search"]</a></li>
-<li class="nav-item"><a class="nav-link @isCurrent("Mailer", "")" asp-controller="Mailer" asp-action="Index" style="color: #eee">@_localizer["Contact"]</a></li>
+<li class="nav-item"><a class="nav-link @isCurrent("Contact", "")" asp-controller="Contact" asp-action="Index" style="color: #eee">@_localizer["Contact"]</a></li>
